Fixed Hero Word spacing - Added 'justify', 'align', and 'text-align' to hero heading

--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -49,6 +49,9 @@
         grid-column: 2/3;
         grid-row: 1/3;
     }
+    .name-and-call h2 {
+        font-size: 3em;
+    }
     .news {
         grid-column: 2/3;
         grid-row: 3/4;
