--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -45,6 +45,12 @@
     .name-and-call {
         grid-row: 1/2;
         grid-column: 1/3;
+        padding-top: 5em;
+        padding-bottom: 5em;
+        text-align: center;
+    }
+    .name-and-call h2 {
+        font-size: 2em;
     }
     .news {
         grid-row: 2/3;
